prevent from jumping

--- a/src/feature/list/component/List/style.css
+++ b/src/feature/list/component/List/style.css
@@ -1,7 +1,3 @@
-.ui.segment > :nth-child(2) {
-  margin-top: 0;
-}
-
 .ui.active.dimmer {
   margin: 1em 0;
   position: relative;
